--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,18 +1,12 @@
+limit_req_zone $binary_remote_addr zone=mylimit:10m rate=1r/s;
+
 server {
     location /app1/ {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_pass http://app1:5000;
-    }
-
-	location /app1/hello {
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        limit_req zone=mylimit burst=3;
 
         proxy_pass http://app1:5000;
     }
@@ -21,16 +15,17 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        limit_req zone=mylimit burst=3 nodelay;
 
         proxy_pass http://app2:5100;
     }
 
-	location /app2/hello {
+    location / {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_pass http://app2:5100;
+        proxy_pass http://ui:3000;
     }
 }
