- feat: Add authentication service for Node.js apps - chore: Update Docker configuration for authentication service - chore: Update React UI to display list of applications

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,13 @@ services:
             - "5100:5100"
         volumes:
           - ./node/app2:/usr/src/app
+    auth:
+        build:
+            context: ./node/auth
+        ports:
+            - "5200:5200"
+        volumes:
+          - ./node/auth:/usr/src/app
     nginx:
         restart: always
         build:
