--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,15 @@
 limit_req_zone $binary_remote_addr zone=mylimit:10m rate=1r/s;
 
 server {
+    location /auth/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        limit_req zone=mylimit burst=3;
+
+        proxy_pass http://auth:5200;
+    }
     location /app1/ {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
