--- a/server/nginx/default.conf
+++ b/server/nginx/default.conf
@@ -1,5 +1,3 @@
-limit_req_zone $binary_remote_addr zone=mylimit:10m rate=1r/s;
-
 server {
     location /auth/ {
         proxy_set_header Host $host;
@@ -7,25 +5,23 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         limit_req zone=mylimit burst=3;
-
         proxy_pass http://auth:5200;
     }
+
     location /app1/ {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        limit_req zone=mylimit burst=3;
-
-        proxy_pass http://app1:5000;
+        proxy_pass http://app1_backend;
     }
-	location /app2/ {
+
+    location /app2/ {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         limit_req zone=mylimit burst=3 nodelay;
-
         proxy_pass http://app2:5100;
     }
 
@@ -34,7 +30,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
         proxy_pass http://ui:3000;
     }
 }
